jSA - Ajuste de Cubo
Tamaño de  paginado

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Reportes/_CuboDeInformacionPartial.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Reportes/_CuboDeInformacionPartial.cshtml
@@ -16,6 +16,7 @@
         settings.CommandColumn.ShowNewButton = false;
         settings.CommandColumn.ShowDeleteButton = false;
         settings.CommandColumn.ShowEditButton = false;
+        settings.SettingsPager.PageSize = 15;
         settings.Theme = "Material";
         settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
         settings.Settings.ShowFilterRow = true;
