--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_vista_orden_compra.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_vista_orden_compra.xml
@@ -46,9 +46,10 @@
                     android:layout_marginTop="10dp"
                     android:gravity="center"
                     android:layout_weight="1"
-                    android:text="@string/seleccionar_fecha"
                     android:textColor="@color/colorTextLogin"
-                    android:textSize="20dp" />
+                    android:textSize="20dp"
+                    />
+                <!--android:text="@string/seleccionar_fecha"-->
 
             </LinearLayout>
 
