--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
@@ -331,7 +331,7 @@
 <script src="~/assets/plugins/jquery-inputmask/jquery.inputmask.bundle.js"></script>
 
 <script src="~/assets/plugins/jquery-knob/jquery.knob.min.js"></script>
-<script src="~/assets/js/pages/charts/morris.js"></script>
+@*<script src="~/assets/js/pages/charts/morris.js"></script>*@
 
 <script src="~/assets/js/pages/charts/jquery-knob.js"></script>
 <script src="~/assets/plugins/momentjs/moment.js"></script>
