--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Cobranza/_AbonosPartial.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Cobranza/_AbonosPartial.cshtml
@@ -5,6 +5,7 @@
     {
         settings.Name = "Abonos";
         settings.KeyFieldName = "IdCargo";
+        settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
         settings.CallbackRouteValues = new { Controller = "Cobranza", Action = "_AbonosPartial" };
         settings.SettingsEditing.Mode = GridViewEditingMode.EditFormAndDisplayRow;
         settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "Cobranza", Action = "EditingUpdate" };
@@ -15,12 +16,13 @@
         settings.Theme = "Material";
         settings.SettingsCommandButton.UpdateButton.Text = "Abonar";
         settings.SettingsCommandButton.EditButton.Text = "Abonar";
-        settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+        
+        //settings.Width = System.Web.UI.WebControls.Unit.Percentage(10);
         settings.Columns.Add(c =>
         {
             c.FieldName = "IdCargo";
             c.Caption = "No Cargo";
-            c.Width = System.Web.UI.WebControls.Unit.Percentage(20);
+            c.Width = System.Web.UI.WebControls.Unit.Percentage(7);
             c.Settings.AllowSort = DefaultBoolean.False;
             c.EditFormSettings.Visible = DefaultBoolean.False;
         });
@@ -28,7 +30,7 @@
         {
             c.FieldName = "Ticket";
             c.Caption = "Ticket";
-            c.Width = System.Web.UI.WebControls.Unit.Percentage(20);
+            //c.Width = System.Web.UI.WebControls.Unit.Percentage(20);
             c.Settings.AllowSort = DefaultBoolean.False;
             c.EditFormSettings.Visible = DefaultBoolean.False;
         });
@@ -36,7 +38,7 @@
         {
             c.FieldName = "TotalCargo";
             c.Caption = "Importe";
-            c.Width = System.Web.UI.WebControls.Unit.Percentage(10);
+            //c.Width = System.Web.UI.WebControls.Unit.Percentage(10);
             c.Settings.AllowSort = DefaultBoolean.False;
             c.Settings.ShowEditorInBatchEditMode = false;
             c.UnboundType = DevExpress.Data.UnboundColumnType.Decimal;
@@ -47,7 +49,7 @@
         {
             c.FieldName = "TotalAbonos";
             c.Caption = "Abonado";
-            c.Width = System.Web.UI.WebControls.Unit.Percentage(20);
+            //c.Width = System.Web.UI.WebControls.Unit.Percentage(20);
             c.Settings.AllowSort = DefaultBoolean.False;
             c.EditFormSettings.Visible = DefaultBoolean.False;
         });
@@ -55,7 +57,7 @@
         {
             c.FieldName = "SaldoInsoluto";
             c.Caption = "Saldo insoluto";
-            c.Width = System.Web.UI.WebControls.Unit.Percentage(20);
+            //c.Width = System.Web.UI.WebControls.Unit.Percentage(20);
             c.Settings.AllowSort = DefaultBoolean.False;
             c.EditFormSettings.Visible = DefaultBoolean.False;
         });
@@ -76,7 +78,7 @@
                     s.Properties.EditFormat = EditFormat.Custom;
                     s.Properties.EditFormatString = "dd/MM/yyyy";
                     settings.Attributes.Clear();
-                    s.Width = System.Web.UI.WebControls.Unit.Percentage(80);
+                    //s.Width = System.Web.UI.WebControls.Unit.Percentage(80);
                     s.Properties.CalendarProperties.FastNavProperties.DisplayMode = FastNavigationDisplayMode.Inline;
                 }).GetHtml();
             });
@@ -128,7 +130,11 @@
                 if (x.Grid.GetRowValues(x.VisibleIndex, "URL_CFDI") != null && !x.Grid.GetRowValues(x.VisibleIndex, "URL_XML").ToString().Equals(string.Empty))
                 {
                     ViewContext.Writer.Write(string.Format("<a href=" + x.Grid.GetRowValues(x.VisibleIndex, "URL_XML").ToString() + "class='tip' target='_blank' role='button' aria-haspopup='true' aria-expanded='false'><i class='material-icons'>file_download</i></a>"));
-                }               
+                }
+                if (x.Grid.GetRowValues(x.VisibleIndex, "URL_CFDI") == null && x.Grid.GetRowValues(x.VisibleIndex, "URL_CFDI") == null)
+                {
+                    ViewContext.Writer.Write("Sin acciones");
+                }
             });
         });
 
