--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
@@ -107,10 +107,10 @@
                         if (rol.VentasCajaGeneral)
                         {
                             <li>
-                                <a href="javascript:void(0);" class="menu-toggle"><i class="material-icons">attach_money</i><span>Ventas</span> </a>
+                                <a href="javascript:void(0);" class="menu-toggle"><i class="material-icons">attach_money</i><span>Caja</span> </a>
                                 <ul class="ml-menu">
-                                    <li>@Html.ActionLink("Caja General", "Index", "CajaGeneral")</li>
-                                    <li>@Html.ActionLink("Caja General Estación", "Estacion", "CajaGeneral")</li>
+                                    <li>@Html.ActionLink("Liquidaciones", "Index", "CajaGeneral")</li>
+                                    <li>@Html.ActionLink("Corte de Caja", "CorteCaja", "Reportes")</li>
                                 </ul>
                             </li>
                         }
