--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Cobranza/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Cobranza/Index.cshtml
@@ -71,7 +71,7 @@
                                 </div>
                             </div>
                             <br />
-                            <div class="row clearfix">
+                            @*<div class="row clearfix">
                                 <div class="col-sm-12">
                                     <div class="row clearfix">
                                         <div class="col-md-2">
@@ -114,15 +114,14 @@
                                             <input type="text" name="Rfc" class="form-control" placeholder="RFC del cliente" />
 
                                         </div>
-                                        @*@Html.ValidationMessageFor(m => m., "", new { @class = "alert-danger" })*@
-                                        <div class="col-md-2" style="top:10px">
+                                                                               @*<div class="col-md-2" style="top:10px">
                                             <div class="form-group">
                                                 <input type="submit" name="Buscar" value="Buscar" class="btn btn-raised btn-primary btn-round float-left" />
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                            </div>*@
                             <br />
                             @if (ViewBag.MensajeError != null)
                             {
