Avance ajustes facturacion
ajustes en reporte de venta

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Clientes/_Clientes.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Clientes/_Clientes.cshtml
@@ -11,10 +11,11 @@
         };
         settings.KeyFieldName = "IdCliente";
         settings.SettingsPager.Visible = true;
-        settings.Settings.ShowGroupPanel = false;
+        settings.Settings.ShowGroupPanel = true;
         settings.Settings.ShowFilterRow = true;
         settings.SettingsBehavior.AllowSelectByRowClick = false;
         settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+
 
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.Off;
         settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
