--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/_ProductosOCPartial.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/_ProductosOCPartial.cshtml
@@ -1,5 +1,3 @@
-@model List<MVC.Presentacion.Models.OrdenCompra.ProductoOCDTO>
-
 @{
     var grid = Html.DevExpress().GridView(settings => {
         settings.Name = "ProductosOC";
@@ -80,6 +78,12 @@
             c.Settings.AllowSort = DefaultBoolean.False;
 
             c.EditFormSettings.Visible = DefaultBoolean.False;
+        });
+        settings.Columns.Add(c =>
+        {
+            c.FieldName = "IdCentroCosto";
+            c.Caption = "Centro Costo";
+            c.Visible = false;
         });
         settings.Columns.Add(c =>
         {
